--- a/anticipate_frontend/client/src/index.css
+++ b/anticipate_frontend/client/src/index.css
@@ -38,6 +38,7 @@ code {
 }
 
 .footer{
+  position:fixed;
   background-color:lightblue;
   text-align:center;
   width:100%;
@@ -74,4 +75,9 @@ float:center;
   height:35%;
   margin:auto;
 
+}
+.index-div{
+  display: flex;
+  justify-content:center;
+  /* text-align:center; */
 }
