added background color to jumbotron for login

--- a/anticipate_frontend/client/src/index.css
+++ b/anticipate_frontend/client/src/index.css
@@ -60,9 +60,11 @@ code {
 }
 .login-jumbo{
   /* background-image: url("./assets/img/medic-team.jpg"); */
+  text-align:center;
   width:55%;
-  height:35%;
+  height:45%;
   margin:0 auto;
+  background-color: #5ce1e6 ;
 }
 
 /* .form-box{
