--- a/anticipate_frontend/client/src/index.css
+++ b/anticipate_frontend/client/src/index.css
@@ -163,3 +163,11 @@ float:center;
 .readygo-info{
   text-align:center;
 }
+
+.login-box{
+  text-align:center;
+}
+
+.singup-box{
+  text-align:center;
+}
