--- a/anticipate_frontend/client/src/index.css
+++ b/anticipate_frontend/client/src/index.css
@@ -140,10 +140,14 @@ float:center;
   /* float:right; */
   height:10%;
   width:90%;
-  background-color: #5ce1e6;
+  ;
 }
 
 /* 
 .readygo-mic{
   float:right;
 } */
+
+.bg-color {
+  background-color: #5ce1e6;
+}
